test(backend): ensure delete product is working correctly